--- a/testing/testcase1.html
+++ b/testing/testcase1.html
@@ -9,5 +9,8 @@
 <body>
     <p>hi this is my first java file</p>
     <p>This is Testing file</p>
+    <section>
+        Ads
+    </section>
 </body>
 </html>
